--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <title>Study2</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        h2{}
+        h2{color: rgb(255, 255, 255);
+        background-color: red;}
+
+        .text {
+            color: brown;
+            background-color: black;
+            font-size: 5rem;
+        }
+
+        #id1 {
+            color: blue;
+            background-color: rgb(37, 0, 0);
+            font-size: 5rem;
+        }
     </style>
 </head>
 <body>
     <h1 style="color: red; background-color: rgb(0, 0, 0);">Hello World</h1>
+    <h2>Selamat datang</h2>
+    <h2>Hallo agys</h2>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium doloremque inventore eum quidem animi totam quibusdam? Repellendus magni accusamus laboriosam rerum? In dignissimos placeat iusto perferendis laudantium maxime maiores saepe!</p>
+
+    <p id="id1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur ex provident vero quae cumque quidem at commodi explicabo adipisci, pariatur laboriosam dolores temporibus ad ipsa tempora sequi voluptas eveniet distinctio?</p>
 </body>
 </html>
